<resources>
    <string name="app_name">Graduates</string>
    <string name="appHeader">GPA Finder</string>
    <string name="subject_2_name">Subject 2</string>
    <string name="marks">Marks</string>
    <string name="subject_1_name">Subject 1</string>
    <string name="subject_3_name">Subject 3</string>
    <string name="subject_4_name">Subject 4</string>
    <string name="subject_5_name">Subject 5</string>
    <string name="subject_6_name">Subject 6</string>
    <string name="credit_hours_hint">Credit Hours</string>
    <string name="checkGPA_button_text">Check GPA</string>
    <string name="finalGPA" />
    <string name="no_ofSubjects_InputBar_TextHint">No.Of Subejcts</string>
    <string name="subjectsHeader">Subjects</string>
    <string name="marksHeader">  Marks  </string>
    <string name="creditHeader">Credit Hours</string>
    <string name="enterButtonText">Enter</string>
    <string name="gpaText">GPA: </string>
    <string name="leftStarDescription">App Icon1</string>
    <string name="noOfSubjectsInputBarHint">No.Of Subjects</string>
    <string name="subject_input">Enter Subject name here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="GenerateReportText">Generate Report? Click Here</string>
    <string name="enterNameText">Enter Name</string>
    <string name="enterRegNoHint">Enter Reg No</string>
    <string name="GenerateButtonText">Generate</string>
    <string name="enterDepartmentEditTextHint">Enter Department</string>
    <string name="enterSemesterEditTextHint">Enter Semester</string>
    <string name="semesterText">Semester-</string>
    <string name="SemesterText">Semester-</string>
    <string name="registrationNoText">Registration #:</string>
    <string name="creditsEarnedText">"Credits Earned: "</string>
    <string name="gpaTEXT">GPA:</string>
    <string name="gradeHeader">" Grade "</string>
    <string name="courseTitleHeader">"Course Tittle"</string>
    <string name="marksSheetHeaderText">Marks Sheet</string>
    <string name="percentageText">Percentage:</string>
    <string name="subject7Text">Subject 7</string>
    <string name="AboutText">\"Welcome to our innovative project designed to streamline the process of calculating both CGPA (Cumulative Grade Point Average) and GPA (Grade Point Average) for students.
Embark on a journey with us as we unveil a powerful tool crafted to effortlessly determine the academic standing of students through precise CGPA and GPA calculations. Unlock the potential of accurate academic evaluation with our project, meticulously engineered to compute CGPA and GPA, providing educators and students alike with invaluable insights.Join us in revolutionizing academic assessment with our cutting-edge project, revolutionizing the way CGPA and GPA are calculated, enhancing efficiency and accuracy.
Step into the future of academic evaluation with our groundbreaking project, simplifying the complexities of CGPA and GPA calculations for students, teachers, and institutions.
Experience the ease and reliability of our project, designed to simplify the intricate process of computing CGPA and GPA, empowering students to track their academic progress effortlessly.
Discover the power of precision in academic assessment with our project, offering a seamless solution for computing CGPA and GPA, ensuring transparency and accuracy in student performance evaluation.
Enter a world of efficiency and accuracy in academic evaluation with our project, equipped with advanced algorithms to compute CGPA and GPA, setting new benchmarks in student performance assessment.\"</string>
    <string name="AboutHeading">About</string>
    <string name="CourseMarksText">"  Marks  "</string>
    <string name="imageContentDiscription">This is CUVAS logo and main screen logo</string>
    <string name="noOfSubjectsSelection">Choose Number of Subjects</string>
    <string name="oneSubjectText">"One Subject"</string>
    <string name="twoSubjectsText">"Two Subjects"</string>
    <string name="threeSubjectText">"Three Subjects"</string>
    <string name="fourSubjectText">"Four Subjects"</string>
    <string name="fiveSubjectText">"Five Subjects"</string>
    <string name="sixSubjectText">"Six Subjects"</string>
    <string name="sevenSubjectText">"Seven Subjects"</string>
    <string name="eightSubjectText">"Eight Subjects"</string>
    <string name="kkk">"Nine Subjects"</string>
    <string name="ki">"Ten Subjects"</string>
    <string name="oneSubject">1</string>
    <string name="oneSubject_text">Subject</string>
    <string name="twoSubjects">2</string>
    <string name="subjectText">Subjects</string>
    <string name="threeSubjects">3</string>
    <string name="fourSubjects">4</string>
    <string name="fiveSubjects">5</string>
    <string name="sixSubjects">6</string>
    <string name="sevenSubjects">7</string>
    <string name="eightSubjects">8</string>
    <string name="subject_7_name">Subject 7</string>
    <string name="subject_8_name">Subject 8</string>
    <string name="resetButtonText">Reset Input</string>
    <string name="calculateText">Calculate</string>
    <string name="calculateGPAText">GPA</string>
    <string name="GraduatesText">Graduates</string>
    <string name="slogonLines">Enahance Your Acadamics</string>
    <string name="semestersText">Semesters</string>
    <string name="semester1">"Semester 1: "</string>
    <string name="semester2">"Semester 2: "</string>
    <string name="semester3">"Semester 3: "</string>
    <string name="semester4">"Semester 4: "</string>
    <string name="semester5">"Semester 5: "</string>
    <string name="semester6">"Semester 6: "</string>
    <string name="semester7">"Semester 7: "</string>
    <string name="semester8">"Semester 8: "</string>
    <string name="semester9">"Semester 9: "</string>
    <string name="semester10">"Semester 10: "</string>
    <string name="enterGPAHint">GPA</string>
    <string name="totalCreditsHint">Total Credits</string>
    <string name="checkCGPAButtonText">Check CGPA</string>
    <string name="nineSubjects">9</string>
    <string name="tenSubjects">10</string>
    <string name="nineSubjectsText">Subject 9</string>
    <string name="tenSubjectsText">Subject 10</string>
    <string name="subject_9_text">Subject 9</string>
    <string name="subject_10_text">Subject 10</string>
    <string name="cgpa_TEXT">CGPA: </string>
    <string name="semesterHeading">Semester</string>
    <string name="creditsHeader">Credits</string>
    <string name="AboutIntro">About Intro</string>
    <string name="aboutImageDescription">App Icon</string>
    <string name="cgpaIconDescription">CGPA Icon</string>
    <string name="developerName">Developed by Wahaj Sajid</string>
    <string name="DevelopedByText">Developed by</string>
    <string name="DeveloperName">Wahaj Sajid</string>
<string name="GPAText">GPA</string>
    <string name="CGPAText">CGPA</string>
</resources>