<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:contentDescription="@string/aboutImageDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/newicon_removebg_preview"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/developerByText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/DevelopedByText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/developerName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/developerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:text="@string/DeveloperName"
        android:textSize="20sp"
        android:textColor="#007AFF"
        app:layout_constraintBottom_toBottomOf="@id/developerByText"
        app:layout_constraintStart_toEndOf="@id/developerByText" />
</androidx.constraintlayout.widget.ConstraintLayout>