<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AboutFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/topConstraintLayout">

    <ImageView
        android:id="@+id/gpaIcon"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:contentDescription="@string/aboutImageDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_screen_design" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height='wrap_content'
        app:layout_constraintTop_toBottomOf="@id/gpaIcon">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/AboutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="300sp"
                android:contentDescription="@string/AboutIntro"
                android:text="@string/AboutText"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
