<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="5"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:columnCount="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/oneSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/oneSubjectCardsStyles">
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/noOfSubjectHeading1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/oneSubject"
                        android:textColor="@color/holoBlue"
                        android:textSize="50dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/subjectHeading1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/oneSubject_text"
                        android:textColor="@color/holoBlue"
                        android:textSize="30dp"
                        android:textStyle="italic" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/twoSubjects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/twoSubjectsCardsStyles">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/noOfSubjectHeading2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/twoSubjects"
                        android:textColor="@color/holoBlue"
                        android:textSize="50dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/subjectHeading2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/subjectText"
                        android:textColor="@color/holoBlue"
                        android:textSize="30dp"
                        android:textStyle="italic" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>